--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/2nd.loader.js";
+      var loaderUrl = buildUrl + "/WashingMachineBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/2nd.data",
-        frameworkUrl: buildUrl + "/2nd.framework.js",
-        codeUrl: buildUrl + "/2nd.wasm",
+        dataUrl: buildUrl + "/WashingMachineBuild.data",
+        frameworkUrl: buildUrl + "/WashingMachineBuild.framework.js",
+        codeUrl: buildUrl + "/WashingMachineBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Virnect",
         productName: "WashingMachine",
